--- a/samples/hcube/Makefile.in
+++ b/samples/hcube/Makefile.in
@@ -12,9 +12,10 @@ TARGET = hcube
 # USERIF_LIBS=$(CMDENV_LIBS)
 USERIF_LIBS=$(TKENV_LIBS)
 
-# Uncomment the second line for parallel execution (PVM3) support (-p option):
+# uncomment 1 of the 3 lines to support either serial or parallel operation
 KERNEL_LIBS=$(STD_KERNEL_LIBS)
 # KERNEL_LIBS=$(PVM_KERNEL_LIBS)
+# KERNEL_LIBS=$(MPI_KERNEL_LIBS)
 
 # .ned or .h include paths with -I
 INCLUDE_PATH=
@@ -45,6 +46,7 @@ OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 
 TK_LIBS=@TK_LIBS@
+MPI_LIBS=@MPI_LIBS@
 PVM_LIBS=@PVM_LIBS@
 SYS_LIBS=@SYS_LIBS@
 SYS_LIBS_PURE=-lm $(shell $(CXX) -print-file-name=libstdc++.a)
@@ -55,44 +57,47 @@ TKENV_LIBS=-lenvir -ltkenv $(TK_LIBS)
 
 # Simulation kernel
 STD_KERNEL_LIBS=-lsim_std
+MPI_KERNEL_LIBS=-lsim_mpi $(MPI_LIBS)
 PVM_KERNEL_LIBS=-lsim_pvm $(PVM_LIBS)
 
 # Simulation kernel and user interface libraries
-OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS)
+OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(USERIF_LIBS) $(KERNEL_LIBS) $(SYS_LIBS)
 
 COPTS=$(CFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
+NEDCFLAGS=-gstabs+3 -pipe -fpermissive -Wall -Wno-unused
+NEDCOPTS=$(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 
 # Object files from this directory to link
 OBJS= gensink_n.o hc_net_n.o hc_rte_n.o hcube_n.o gensink.o hc_rte.o
 
-$(TARGET): $(OBJS) $(EXRA_OBJS) Makefile
-	$(CC) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
+$(TARGET): $(OBJS) $(EXRA_OBJS) Makefile 
+	$(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
 
 purify: $(OBJS) $(EXRA_OBJS)   Makefile
-	purify $(CC) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
+	purify $(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
 
 gensink_n.o: gensink_n.cc
-	$(CXX) -c $(COPTS) gensink_n.cc
+	$(CXX) -c $(NEDCOPTS) gensink_n.cc
 
 gensink_n.cc: gensink.ned
 	$(NEDC) $(INCLUDE_PATH) gensink.ned
 
 hc_net_n.o: hc_net_n.cc
-	$(CXX) -c $(COPTS) hc_net_n.cc
+	$(CXX) -c $(NEDCOPTS) hc_net_n.cc
 
 hc_net_n.cc: hc_net.ned
 	$(NEDC) $(INCLUDE_PATH) hc_net.ned
 
 hc_rte_n.o: hc_rte_n.cc
-	$(CXX) -c $(COPTS) hc_rte_n.cc
+	$(CXX) -c $(NEDCOPTS) hc_rte_n.cc
 
 hc_rte_n.cc: hc_rte.ned
 	$(NEDC) $(INCLUDE_PATH) hc_rte.ned
 
 hcube_n.o: hcube_n.cc
-	$(CXX) -c $(COPTS) hcube_n.cc
+	$(CXX) -c $(NEDCOPTS) hcube_n.cc
 
 hcube_n.cc: hcube.ned
 	$(NEDC) $(INCLUDE_PATH) hcube.ned
@@ -118,7 +123,6 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-gensink.o: gensink.cc \
-  gensink.h
-hc_rte.o: hc_rte.cc \
-  hc_rte.h
+
+gensink.o: gensink.h
+hc_rte.o: hc_rte.h
