--- a/samples/token/Makefile.in
+++ b/samples/token/Makefile.in
@@ -12,9 +12,10 @@ TARGET = token
 # USERIF_LIBS=$(CMDENV_LIBS)
 USERIF_LIBS=$(TKENV_LIBS)
 
-# Uncomment the second line for parallel execution (PVM3) support (-p option):
+# uncomment 1 of the 3 lines to support either serial or parallel operation
 KERNEL_LIBS=$(STD_KERNEL_LIBS)
 # KERNEL_LIBS=$(PVM_KERNEL_LIBS)
+# KERNEL_LIBS=$(MPI_KERNEL_LIBS)
 
 # .ned or .h include paths with -I
 INCLUDE_PATH=
@@ -45,6 +46,7 @@ OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 
 TK_LIBS=@TK_LIBS@
+MPI_LIBS=@MPI_LIBS@
 PVM_LIBS=@PVM_LIBS@
 SYS_LIBS=@SYS_LIBS@
 SYS_LIBS_PURE=-lm $(shell $(CXX) -print-file-name=libstdc++.a)
@@ -55,32 +57,35 @@ TKENV_LIBS=-lenvir -ltkenv $(TK_LIBS)
 
 # Simulation kernel
 STD_KERNEL_LIBS=-lsim_std
+MPI_KERNEL_LIBS=-lsim_mpi $(MPI_LIBS)
 PVM_KERNEL_LIBS=-lsim_pvm $(PVM_LIBS)
 
 # Simulation kernel and user interface libraries
-OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS)
+OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(USERIF_LIBS) $(KERNEL_LIBS) $(SYS_LIBS)
 
 COPTS=$(CFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
+NEDCFLAGS=-gstabs+3 -pipe -fpermissive -Wall -Wno-unused
+NEDCOPTS=$(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 
 # Object files from this directory to link
 OBJS= tknmods_n.o tknring_n.o token.o
 
-$(TARGET): $(OBJS) $(EXRA_OBJS) Makefile
-	$(CC) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
+$(TARGET): $(OBJS) $(EXRA_OBJS) Makefile 
+	$(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
 
 purify: $(OBJS) $(EXRA_OBJS)   Makefile
-	purify $(CC) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
+	purify $(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
 
 tknmods_n.o: tknmods_n.cc
-	$(CXX) -c $(COPTS) tknmods_n.cc
+	$(CXX) -c $(NEDCOPTS) tknmods_n.cc
 
 tknmods_n.cc: tknmods.ned
 	$(NEDC) $(INCLUDE_PATH) tknmods.ned
 
 tknring_n.o: tknring_n.cc
-	$(CXX) -c $(COPTS) tknring_n.cc
+	$(CXX) -c $(NEDCOPTS) tknring_n.cc
 
 tknring_n.cc: tknring.ned
 	$(NEDC) $(INCLUDE_PATH) tknring.ned
@@ -103,5 +108,5 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-token.o: token.cc \
-  token.h
+
+token.o: token.h
