--- a/tutorial/queues/Makefile.in
+++ b/tutorial/queues/Makefile.in
@@ -12,9 +12,10 @@ TARGET = queues
 # USERIF_LIBS=$(CMDENV_LIBS)
 USERIF_LIBS=$(TKENV_LIBS)
 
-# Uncomment the second line for parallel execution (PVM3) support (-p option):
+# uncomment 1 of the 3 lines to support either serial or parallel operation
 KERNEL_LIBS=$(STD_KERNEL_LIBS)
 # KERNEL_LIBS=$(PVM_KERNEL_LIBS)
+# KERNEL_LIBS=$(MPI_KERNEL_LIBS)
 
 # .ned or .h include paths with -I
 INCLUDE_PATH=
@@ -38,6 +39,7 @@ SHLIB_LD=@SHLIB_LD@
 MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
+NEDCFLAGS=@NEDCFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
 
@@ -45,6 +47,7 @@ OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 
 TK_LIBS=@TK_LIBS@
+MPI_LIBS=@MPI_LIBS@
 PVM_LIBS=@PVM_LIBS@
 SYS_LIBS=@SYS_LIBS@
 SYS_LIBS_PURE=-lm $(shell $(CXX) -print-file-name=libstdc++.a)
@@ -55,50 +58,52 @@ TKENV_LIBS=-lenvir -ltkenv $(TK_LIBS)
 
 # Simulation kernel
 STD_KERNEL_LIBS=-lsim_std
+MPI_KERNEL_LIBS=-lsim_mpi $(MPI_LIBS)
 PVM_KERNEL_LIBS=-lsim_pvm $(PVM_LIBS)
 
 # Simulation kernel and user interface libraries
-OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS)
+OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(USERIF_LIBS) $(KERNEL_LIBS) $(SYS_LIBS)
 
 COPTS=$(CFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
+NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 
 # Object files from this directory to link
-OBJS= fifo_n.o fifonet_n.o gen_n.o ring_n.o sink_n.o distributions.o fifo.o gen.o sink.o
+OBJS= fifo_n.o fifonet_n.o gen_n.o ring_n.o sink_n.o distributions.o fifo.o   gen.o   sink.o 
 
-$(TARGET): $(OBJS) $(EXRA_OBJS) Makefile
-	$(CC) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
+$(TARGET): $(OBJS) $(EXRA_OBJS) Makefile 
+	$(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
 
 purify: $(OBJS) $(EXRA_OBJS)   Makefile
-	purify $(CC) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
+	purify $(CXX) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
 
 fifo_n.o: fifo_n.cc
-	$(CXX) -c $(COPTS) fifo_n.cc
+	$(CXX) -c $(NEDCOPTS) fifo_n.cc
 
 fifo_n.cc: fifo.ned
 	$(NEDC) $(INCLUDE_PATH) fifo.ned
 
 fifonet_n.o: fifonet_n.cc
-	$(CXX) -c $(COPTS) fifonet_n.cc
+	$(CXX) -c $(NEDCOPTS) fifonet_n.cc
 
 fifonet_n.cc: fifonet.ned
 	$(NEDC) $(INCLUDE_PATH) fifonet.ned
 
 gen_n.o: gen_n.cc
-	$(CXX) -c $(COPTS) gen_n.cc
+	$(CXX) -c $(NEDCOPTS) gen_n.cc
 
 gen_n.cc: gen.ned
 	$(NEDC) $(INCLUDE_PATH) gen.ned
 
 ring_n.o: ring_n.cc
-	$(CXX) -c $(COPTS) ring_n.cc
+	$(CXX) -c $(NEDCOPTS) ring_n.cc
 
 ring_n.cc: ring.ned
 	$(NEDC) $(INCLUDE_PATH) ring.ned
 
 sink_n.o: sink_n.cc
-	$(CXX) -c $(COPTS) sink_n.cc
+	$(CXX) -c $(NEDCOPTS) sink_n.cc
 
 sink_n.cc: sink.ned
 	$(NEDC) $(INCLUDE_PATH) sink.ned
@@ -130,4 +135,15 @@ re-makemake-m:
 	opp_makemake -f -m    #recreate Makefile.in
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+distributions.o: distributions.cc
+fifo.o: fifo.cc \
+  fifo.h
+fifo_n.o: fifo_n.cc
+fifonet_n.o: fifonet_n.cc
+gen.o: gen.cc \
+  gen.h
+gen_n.o: gen_n.cc
+ring_n.o: ring_n.cc
+sink.o: sink.cc \
+  sink.h
+sink_n.o: sink_n.cc
