--- a/Makefile.vc
+++ b/Makefile.vc
@@ -43,7 +43,7 @@ components: libs progs configsamples samples configtutorial thetutorial
 
 LIBS=$(ENVIR_ILIB) sim envir cmdenv tkenv
 PROGS=utils nedc gned plove
-SAMPLES=dyna fddi fifo1 fifo2 hcube hist nim pvmex token demo
+SAMPLES=dyna fddi fifo1 fifo2 hcube hist nim pvmex token dyna2 demo
 
 #
 # Group targets. Note that utils has to be built BEFORE other libs and progs.
@@ -137,6 +137,10 @@ pvmex:
 token:
 	@echo ===== Compiling $@ ====
 	cd /d $(OMNETPP_SAMPLES_DIR:/=\)\token && $(MAKE) $(MOPTS) -f $@.mak
+
+dyna2:
+	@echo ===== Compiling $@ ====
+	cd /d $(OMNETPP_SAMPLES_DIR:/=\)\dyna2 && $(MAKE) $(MOPTS) -f $@.mak
 
 demo:
 	@echo ===== Compiling $@ ====
