OMNETPP_LIBS: KERNEL_LIBS after USERIF_LIBS

--- a/samples/demo/Makefile.in
+++ b/samples/demo/Makefile.in
@@ -57,7 +57,7 @@ STD_KERNEL_LIBS=-lsim_std
 PVM_KERNEL_LIBS=-lsim_pvm $(PVM_LIBS)
 
 # Simulation kernel and user interface libraries
-OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS)
+OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(USERIF_LIBS) $(KERNEL_LIBS) $(SYS_LIBS)
 
 COPTS=$(CFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
