--- a/configure.in
+++ b/configure.in
@@ -39,6 +39,7 @@ OMNETPP_LIB_DIR="$OMNETPP_ROOT/lib"
 
 OMNETPP_TKENV_DIR="$OMNETPP_SRC_DIR/tkenv"
 OMNETPP_GNED_DIR="$OMNETPP_SRC_DIR/gned"
+OMNETPP_NEDC_DIR="$OMNETPP_SRC_DIR/nedc"
 OMNETPP_PLOVE_DIR="$OMNETPP_SRC_DIR/plove"
 
 #
@@ -112,10 +113,15 @@ AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_RANLIB
 
+# perl is needed for experimental nedc message subclassing (see feature nedc-subcl)
+AC_ARG_VAR(PERL, The Perl interpreter)
+AC_PATH_PROG(PERL, perl)
+
 # FIXME: the following lines will need some check
 AS="as"
 AR="ar cr"
 SHLIB_LD="$CXX -shared"
+# NEDC default - maybe overwritten by feature nedc-subcl
 NEDC="nedc"
 MAKEDEPEND="perl `pwd`/src/utils/makedep.pl -Y --objdirtree"
 
@@ -152,6 +158,8 @@ fi
 if test "x$WISH" = "x"; then
     AC_MSG_WARN(cannot find wish -- you'll need to manually adjust the Plove script)
 fi
+
+
 
 #----------------------
 # Read in user settings (and allow override the above settings)
@@ -386,6 +394,38 @@ elif test "$cygwin" = yes; then
 else
    PLOVE_VARIANT=plove-sh
 fi
+
+#----------------------
+# Feature tests
+#----------------------
+
+# experimental subclassing
+AC_ARG_ENABLE(nedc-subcl,
+[  --enable-nedc-subcl     experimental nedc subclassing extension (no support - use at own risk)],
+[case "${enableval}" in
+   yes|no) ;;
+   *)      AC_MSG_ERROR([bad value ${enableval} for nedc-subcl option]) ;;
+ esac],
+              [enableval=no])
+if test "${enableval}" = yes; then
+  if test -z "${PERL}" ; then
+    AC_MSG_WARN(no perl found - disabling feature nedc-subcl)
+  else
+    cat 1>&2 << EOT
+
+Warning: You have enabled nedc subclassing which is experimental.
+         Please note that it works for unix like systems only and
+         that there is no support possible if you encounter problems.
+         At least you should read the message subclassing documentation
+         ${OMNETPP_NEDC_DIR}/msgdoc.txt
+
+EOT
+
+  NEDC="${OMNETPP_NEDC_DIR}/nedcwrapper.sh"
+
+  fi
+fi
+
 
 #----------------------
 # Subtitutions.
