--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -24,7 +24,7 @@ OBJS=ebnf.tab.o lex.yy.o jar.o jar_lib.o jar_mod.o jar_expr.o jar_mem.o
 # Targets
 #
 nedc: $(OBJS)
-	$(CC) $(LDFLAGS) $(OBJS) -o nedc
+	$(CXX) $(LDFLAGS) $(OBJS) -o nedc
 	../utils/install-prog nedc $(OMNETPP_BIN_DIR)
 
 lex.yy.o: jar_func.h lex.yy.c
