'clean' made better

--- a/src/envir/Makefile.vc
+++ b/src/envir/Makefile.vc
@@ -70,8 +70,8 @@ depend:
 	$(MAKEDEPEND) -I../../include -fMakefile.vc -- *.cc
 
 clean:
-	del *.obj envir.lib envir.dll envir.ilib envir.exp 2> nul
-	del *.ilk *.idb *.pdb 2> nul
+	-del *.obj envir.lib envir.dll envir.ilib envir.exp 2> nul
+	-del *.ilk *.idb *.pdb *.pch 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 args.obj: args.cc \
