--- a/src/nedc/Makefile.vc
+++ b/src/nedc/Makefile.vc
@@ -54,7 +54,7 @@ depend:
 
 clean:
 	-del *.obj nedc.exe *_n.cc 2> nul
-	-del *.ilk *.idb *.pdb 2> nul
+	-del *.ilk *.idb *.pdb *.pch 2> nul
 
 realclean: clean
 	-del lex.yy.c ebnf.tab.c ebnf.tab.h 2> nul
