--- a/src/utils/Makefile.vc
+++ b/src/utils/Makefile.vc
@@ -23,7 +23,7 @@ depend:
 
 clean:
 	-del *.obj seedtool.exe tcl2c.exe opp_replace.exe 2> nul
-	-del *.ilk *.idb *.pdb 2> nul
+	-del *.ilk *.idb *.pdb *.pch 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 seedtool.obj: seedtool.cc
