--- a/configure.in
+++ b/configure.in
@@ -49,6 +49,7 @@ OMNETPP_DOC_DIR="$OMNETPP_ROOT/doc"
 OMNETPP_SAMPLES_DIR="$OMNETPP_ROOT/samples"
 OMNETPP_TUTORIAL_DIR="$OMNETPP_ROOT/tutorial"
 # OMNETPP_MODELS_DIR="$OMNETPP_ROOT/models"
+OMNETPP_TEST_DIR="$OMNETPP_ROOT/test"
 OMNETPP_BITMAP_PATH=".;./bitmaps;$OMNETPP_ROOT/bitmaps"
 
 OMNETPP_BIN_DIR="$OMNETPP_ROOT/bin"
@@ -469,6 +470,7 @@ AC_SUBST(OMNETPP_SRC_DIR)
 AC_SUBST(OMNETPP_DOC_DIR)
 AC_SUBST(OMNETPP_SAMPLES_DIR)
 AC_SUBST(OMNETPP_TUTORIAL_DIR)
+dnl AC_SUBST(OMNETPP_TEST_DIR)
 dnl AC_SUBST(OMNETPP_MODELS_DIR)
 
 AC_SUBST(YACC)
@@ -542,6 +544,7 @@ AC_OUTPUT(
   samples/demo/Makefile
   tutorial/queues/Makefile
   doc/api/Makefile
+  test/Makefile
 )
 
 chmod +x src/utils/opp_makemake
