--- a/Makefile.in
+++ b/Makefile.in
@@ -13,6 +13,7 @@ OMNETPP_SRC_DIR =       @OMNETPP_SRC_DIR@
 OMNETPP_DOC_DIR =       @OMNETPP_DOC_DIR@
 OMNETPP_SAMPLES_DIR =   @OMNETPP_SAMPLES_DIR@
 OMNETPP_TUTORIAL_DIR =  @OMNETPP_TUTORIAL_DIR@
+OMNETPP_TEST_DIR =      @OMNETPP_TEST_DIR@
 
 #=====================================================================
 #
@@ -120,6 +121,12 @@ tutorials:
 docs:
 	cd $(OMNETPP_DOC_DIR)/api && $(MAKE)
 
+#
+# Test
+#
+test:
+	cd $(OMNETPP_TEST_DIR) && $(MAKE)
+        
 #=====================================================================
 #
 # Utilities
@@ -152,7 +159,8 @@ clean:
 	for i in $(SAMPLES); do \
 	    (cd $(OMNETPP_SAMPLES_DIR)/$$i && $(MAKE) clean); \
 	done
-	cd $(OMNETPP_TUTORIAL_DIR)/queues && $(MAKE) clean;
+	cd $(OMNETPP_TUTORIAL_DIR)/queues && $(MAKE) clean
+	cd $(OMNETPP_TEST_DIR) && $(MAKE) clean
 
 depend:
 	for i in $(LIBS) $(PROGS); do \
