* opp_makemake.in (): when parsing option -u: use brackets around tr groups

--- a/src/utils/opp_makemake.in
+++ b/src/utils/opp_makemake.in
@@ -89,7 +89,7 @@ EOT
 
         -u | --userinterface)
         shift
-        userif=`echo $1 | tr a-z A-Z`
+        userif=`echo $1 | tr [a-z] [A-Z]`
         case "$userif" in
             CMDENV | TKENV)
             ;;
