--- a/configure.in
+++ b/configure.in
@@ -138,7 +138,7 @@ AC_PROG_RANLIB
 
 # doxygen is used for generation of api doc
 AC_ARG_VAR(DOXYGEN, The doxygen documentation tool)
-AC_PATH_PROG(DOXYGEN, doxygen)
+AC_PATH_PROG(DOXYGEN, doxygen, doxygen)
 
 # perl is needed for experimental nedc message subclassing (see feature nedc-subcl)
 AC_ARG_VAR(PERL, The Perl interpreter)
@@ -553,7 +553,7 @@ AC_OUTPUT(
   samples/demo/Makefile
   samples/demo/Makefile
   tutorial/queues/Makefile
-  doc/api/Makefile
+  include/Makefile
   test/Makefile
 )
 
